feat(1.21.8): port to Minecraft 1.21.8